SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/How_often_would_they_like_to_release__c.field-meta.xml
<CustomField>
    <fullName>How_often_would_they_like_to_release__c</fullName>
    <description>How often would they like to release? (E.g., every 6 weeks, daily, etc.)</description>
    <inlineHelpText>How often would they like to release? (E.g., every 6 weeks, daily, etc.)</inlineHelpText>
    <label>How often would they like to release?</label>
    <length>55</length>
    <type>Text</type>
</CustomField>