SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/IB_OB_Category__c.field-meta.xml
<CustomField>
    <fullName>IB_OB_Category__c</fullName>
    <label>IB/OB Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FT_Lead_Category</valueSetName>
    </valueSet>
</CustomField>