SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/ICP_Date__c.field-meta.xml
<CustomField>
    <fullName>ICP_Date__c</fullName>
    <label>ICP Date</label>
    <type>Date</type>
</CustomField>