SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <formula>TODAY() - 90 &gt; LastActivityDate</formula>
    <inlineHelpText>Last activity was over 90 days ago</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>