SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/inActiveSequence__c.field-meta.xml
<CustomField>
    <fullName>inActiveSequence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether a lead or contact is in an active sequence in Apollo.</description>
    <label>inActiveSequence</label>
    <type>Checkbox</type>
</CustomField>