SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/INTL_Region__c.field-meta.xml
<CustomField>
    <fullName>INTL_Region__c</fullName>
    <description>International regions</description>
    <formula>CASE(State,
&quot;Andorra&quot;, &quot;WEur&quot;,
&quot;Afghanistan&quot;, &quot;APAC&quot;,
&quot;Armenia&quot;, &quot;APAC&quot;,
&quot;Austria&quot;, &quot;WEur&quot;,
&quot;Australia&quot;, &quot;AU+NZ&quot;,
&quot;Bangladesh&quot;, &quot;APAC&quot;,
&quot;Belgium&quot;, &quot;WEur&quot;,
&quot;Bhutan&quot;, &quot;APAC&quot;,
&quot;Canada&quot;, &quot;US+CA&quot;,
&quot;Switzerland&quot;, &quot;WEur&quot;,
&quot;China&quot;, &quot;APAC&quot;,
&quot;Czech Republic&quot;, &quot;APAC&quot;,
&quot;Germany&quot;, &quot;WEur&quot;,
&quot;Estonia&quot;, &quot;WEur&quot;,
&quot;Spain&quot;, &quot;WEur&quot;,
&quot;Faroe Islands&quot;, &quot;WEur&quot;,
&quot;France&quot;, &quot;WEur&quot;,
&quot;United Kingdom&quot;, &quot;UK+IR&quot;,
&quot;Guernsey&quot;, &quot;WEur&quot;,
&quot;Gibraltar&quot;, &quot;WEur&quot;,
&quot;Greece&quot;, &quot;WEur&quot;,
&quot;Croatia&quot;, &quot;APAC&quot;,
&quot;Hungary&quot;, &quot;APAC&quot;,
&quot;Indonesia&quot;, &quot;APAC&quot;,
&quot;Ireland&quot;, &quot;UK+IR&quot;,
&quot;Isle of Man&quot;, &quot;WEur&quot;,
&quot;India&quot;, &quot;APAC&quot;,
&quot;Italy&quot;, &quot;WEur&quot;,
&quot;Jersey&quot;, &quot;WEur&quot;,
&quot;Japan&quot;, &quot;APAC&quot;,
&quot;Cambodia&quot;, &quot;APAC&quot;,
&quot;Liechtenstein&quot;, &quot;WEur&quot;,
&quot;Sri Lanka&quot;, &quot;APAC&quot;,
&quot;Lithuania&quot;, &quot;WEur&quot;,
&quot;Luxembourg&quot;, &quot;WEur&quot;,
&quot;Latvia&quot;, &quot;WEur&quot;,
&quot;Monaco&quot;, &quot;WEur&quot;,
&quot;Mongolia&quot;, &quot;APAC&quot;,
&quot;Malta&quot;, &quot;WEur&quot;,
&quot;Maldives&quot;, &quot;APAC&quot;,
&quot;Malaysia&quot;, &quot;APAC&quot;,
&quot;Netherlands&quot;, &quot;WEur&quot;,
&quot;Nepal&quot;, &quot;APAC&quot;,
&quot;New Zealand&quot;, &quot;AU+NZ&quot;,
&quot;Philippines&quot;, &quot;APAC&quot;,
&quot;Pakistan&quot;, &quot;APAC&quot;,
&quot;Poland&quot;, &quot;APAC&quot;,
&quot;Portugal&quot;, &quot;WEur&quot;,
&quot;Romania&quot;, &quot;APAC&quot;,
&quot;Serbia&quot;, &quot;APAC&quot;,
&quot;Singapore&quot;, &quot;APAC&quot;,
&quot;Slovenia&quot;, &quot;APAC&quot;,
&quot;Slovakia&quot;, &quot;APAC&quot;,
&quot;San Marino&quot;, &quot;WEur&quot;,
&quot;Thailand&quot;, &quot;APAC&quot;,
&quot;Taiwan&quot;, &quot;APAC&quot;,
&quot;United States&quot;, &quot;US+CA&quot;,
&quot;Vietnam&quot;, &quot;APAC&quot;,
&quot;Russia&quot;, &quot;APAC&quot;,
&quot;South Korea&quot;, &quot;APAC&quot;,
&quot;Hong Kong&quot;, &quot;APAC&quot;,
&quot;RoW&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>International regions</inlineHelpText>
    <label>INTL Region</label>
    <type>Text</type>
</CustomField>