SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Is_account_owner__c.field-meta.xml
<CustomField>
    <fullName>Is_account_owner__c</fullName>
    <label>Is account owner?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>