SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Is_plan_selected__c.field-meta.xml
<CustomField>
    <fullName>Is_plan_selected__c</fullName>
    <label>Is plan selected?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>