SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Is_Plan_Selected_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Plan_Selected_Date__c</fullName>
    <description>The date / time that the prospect became a customer</description>
    <inlineHelpText>The date / time that the prospect became a customer</inlineHelpText>
    <label>Is Plan Selected Date</label>
    <type>Date</type>
</CustomField>