SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/IsConverted__c.field-meta.xml
<CustomField>
    <fullName>IsConverted__c</fullName>
    <description>Has the lead been converted?</description>
    <formula>IsConverted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsConverted</label>
    <type>Checkbox</type>
</CustomField>