SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/IsMQL__c.field-meta.xml
<CustomField>
    <fullName>IsMQL__c</fullName>
    <description>Did this lead ever touch the MQL Stage?</description>
    <formula>NOT(
    ISBLANK(MQL_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMQL</label>
    <type>Checkbox</type>
</CustomField>