SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/IsSQL__c.field-meta.xml
<CustomField>
    <fullName>IsSQL__c</fullName>
    <formula>NOT(
   ISBLANK(SQL_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSQL</label>
    <type>Checkbox</type>
</CustomField>