SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Journey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Journey_Stage__c</fullName>
    <description>Check which journey stage the prospect is when it becomes a lead</description>
    <formula>CASE(TEXT(Contact_method__c),
&quot;Email - Campaign&quot;, &quot;EDU&quot;,
&quot;Event - in-person&quot;, &quot;EDU&quot;,
&quot;Invite&quot;, &quot;EDU&quot;,
&quot;Chat&quot;, &quot;EVAL&quot;,
&quot;Contact us&quot;, &quot;EVAL&quot;,
&quot;Demo Request&quot;, &quot;ASSESS&quot;,
&quot;Email - Direct&quot;, &quot;EVAL&quot;,
&quot;Referral&quot;, &quot;EVAL&quot;,
&quot;Trial&quot;, &quot;EVAL&quot;,
&quot;Outbound&quot;, &quot;OUT&quot;,
&quot;N/A&quot;)</formula>
    <label>Journey Stage (deprecated)</label>
    <type>Text</type>
</CustomField>