SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Last_Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Member_Status__c</fullName>
    <label>Last Campaign Member Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>