SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Last_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Status__c</fullName>
    <label>Last Campaign Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>RSVP_Yes</fullName>
            </value>
            <value>
                <fullName>RSVP_No</fullName>
            </value>
            <value>
                <fullName>CheckedIn</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Registration Error</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Attended On-demand</fullName>
            </value>
            <value>
                <fullName>Attended Live</fullName>
            </value>
            <value>
                <fullName>Watched OD</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>