SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Last_Campaign_text__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_text__c</fullName>
    <formula>Last_Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Campaign (text)</label>
    <type>Text</type>
</CustomField>