SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Last_Campaign_Today__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Today__c</fullName>
    <formula>Last_Campaign_Date__c = Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Campaign Today</label>
    <type>Checkbox</type>
</CustomField>