SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Last_Feature_Flag_Created__c.field-meta.xml
<CustomField>
    <fullName>Last_Feature_Flag_Created__c</fullName>
    <label>Last Feature Flag Created</label>
    <type>Date</type>
</CustomField>