SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Last_Form_Fill_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Form_Fill_Date__c</fullName>
    <description>Last Form Fill From Marketo</description>
    <label>Last Marketo Activity Date</label>
    <type>Date</type>
</CustomField>