SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Last_Sales_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Activity__c</fullName>
    <label>Last Sales Activity</label>
    <type>DateTime</type>
</CustomField>