SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Latest_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_Campaign_Name__c</fullName>
    <label>Latest Campaign Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>