SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Launchdarkly_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Launchdarkly_Account_ID__c</fullName>
    <label>Launchdarkly Account ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>