SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/LaunchDarkly_Lead__c.field-meta.xml
<CustomField>
    <fullName>LaunchDarkly_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This lead is a LaunchDarkly test account, and should not be worked.</description>
    <label>LaunchDarkly Lead</label>
    <type>Checkbox</type>
</CustomField>