SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/LD_ID_Account_Match__c.field-meta.xml
<CustomField>
    <fullName>LD_ID_Account_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LD ID Account Match</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (LD ID Account Match)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>