SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead</label>
    <type>Checkbox</type>
</CustomField>