SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Lead_Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Converted_Date__c</fullName>
    <label>Lead Converted Date</label>
    <type>Date</type>
</CustomField>