SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <description>For use of Round Robin Assignment Rule</description>
    <displayFormat>{0}</displayFormat>
    <label>Lead_Number</label>
    <type>AutoNumber</type>
</CustomField>