SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Lead_Owner_Matches_Account_Match_BDR__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Matches_Account_Match_BDR__c</fullName>
    <formula>IF( Account_Match_Assigned_BDR__c =  (Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Matches Account Match BDR</label>
    <type>Checkbox</type>
</CustomField>