SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Lead_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Routing_Number__c</fullName>
    <description>An auto-assigned lead routing number for new leads (field should be hidden)</description>
    <displayFormat>A-{0}</displayFormat>
    <label>Lead Routing Number</label>
    <type>AutoNumber</type>
</CustomField>