SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Customer Account</fullName>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Nonprofit</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
                <color>#E27001</color>
                <label>Personal</label>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>