SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/LeanData__Matched_Lead__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeanData Matched Lead (deprecated)</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LeanData Matched Leads</relationshipLabel>
    <relationshipName>Matched_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>