SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/LeanData__Reporting_Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LeanData Matched Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>