SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/LeanData__Reporting_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Timestamp__c</fullName>
    <label>Reporting Timestamp</label>
    <type>DateTime</type>
</CustomField>