SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/LeanData__Router_Status__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Router_Status__c</fullName>
    <label>LeanData Router Status (obsolete)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>not_processed</fullName>
            </value>
            <value>
                <fullName>unmatched</fullName>
            </value>
            <value>
                <fullName>converted</fullName>
            </value>
            <value>
                <fullName>routed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>