SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/LeanData_Last_Route_Date__c.field-meta.xml
<CustomField>
    <fullName>LeanData_Last_Route_Date__c</fullName>
    <description>The most recent time a lead has run through the router</description>
    <label>LeanData Last Route Date</label>
    <type>DateTime</type>
</CustomField>