SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/LeanData_Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>LeanData_Matched_Account__c</fullName>
    <formula>IF( ISBLANK(LeanData__Reporting_Matched_Account__c) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeanData Matched Account?</label>
    <type>Checkbox</type>
</CustomField>