SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/LeanData_Skip_Routing_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>LeanData_Skip_Routing_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LeanData Skip Routing Checkbox</label>
    <type>Checkbox</type>
</CustomField>