SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Manual_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Manual_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Removing lead from homepage dashboard</inlineHelpText>
    <label>Manual Follow Up</label>
    <type>Checkbox</type>
</CustomField>