SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Manual_Routing__c.field-meta.xml
<CustomField>
    <fullName>Manual_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to manually send this lead back through LeanData routing.</inlineHelpText>
    <label>Manual Routing LeanData</label>
    <type>Checkbox</type>
</CustomField>