SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Marketo_to_Salesforce_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Marketo_to_Salesforce_Sync_Error__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Marketo to Salesforce Sync Error?</label>
    <type>Checkbox</type>
</CustomField>