SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Marketo_to_SFDC_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Marketo_to_SFDC_Sync_Error__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is to help identify in Marketo which leads were not able to sync to SFDC.</description>
    <label>Marketo to SFDC Sync Error?</label>
    <type>Checkbox</type>
</CustomField>