SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Matched_Account_ARR__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_ARR__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Match ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>