SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/mkto_si__MSIContactId__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__MSIContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSIContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>