SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Most_Recent_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Opportunity_Type__c</fullName>
    <formula>LeanData__Reporting_Matched_Account__r.Most_Recent_Opportunity_Type__c</formula>
    <label>Most Recent Opportunity Type</label>
    <type>Text</type>
</CustomField>