SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/MQL_50__c.field-meta.xml
<CustomField>
    <fullName>MQL_50__c</fullName>
    <formula>MQL_Score__c &gt; 50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL &gt; 50</label>
    <type>Checkbox</type>
</CustomField>