SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/MQL__c.field-meta.xml
<CustomField>
    <fullName>MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Lead was created without a plan (existing account) it&apos;s an MQL</description>
    <inlineHelpText>If the Lead was created without a plan (existing account) it&apos;s an MQL</inlineHelpText>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>