SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Name_of_Currently_Active_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Currently_Active_Sequence__c</fullName>
    <label>Name of Currently Active Sequence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>