SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Number_of_Active_Sequence_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Sequence_Tasks__c</fullName>
    <label>Number of Active Sequence Tasks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>