SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Other_languages__c.field-meta.xml
<CustomField>
    <fullName>Other_languages__c</fullName>
    <description>If they use other languages/frameworks to build their apps, please list here</description>
    <inlineHelpText>If they use other languages/frameworks to build their apps, please list here</inlineHelpText>
    <label>Other languages</label>
    <length>55</length>
    <type>Text</type>
</CustomField>