SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Outreach_stage__c.field-meta.xml
<CustomField>
    <fullName>Outreach_stage__c</fullName>
    <label>Outreach Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>