SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/p2s_base1__ConversionGeneratedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ConversionGeneratedOpportunity__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ConversionGeneratedOpportunity</label>
    <type>Checkbox</type>
</CustomField>