SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/p2s_base1__CreatedFromLead2__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__CreatedFromLead2__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field should always be set to true</description>
    <inlineHelpText>This field should always be set to true</inlineHelpText>
    <label>CreatedFromLead2 (DEPRECATED)</label>
    <type>Checkbox</type>
</CustomField>