SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/p2s_base1__InitialCampaign__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__InitialCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The initial campaign associated with this lead</description>
    <inlineHelpText>The initial campaign associated with this lead</inlineHelpText>
    <label>Initial Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (Initial Campaign)</relationshipLabel>
    <relationshipName>InitialCampaignLeads</relationshipName>
    <type>Lookup</type>
</CustomField>