SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/p2s_base1__MatchedAccount__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__MatchedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matched Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>